--- a/App/package.json
+++ b/App/package.json
@@ -25,7 +25,7 @@
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "^0.71.7",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
