--- a/App/package.json
+++ b/App/package.json
@@ -31,6 +31,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-paper": "^5.11.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
