--- a/App/package.json
+++ b/App/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
@@ -37,7 +38,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
