--- a/App/package.json
+++ b/App/package.json
@@ -33,6 +33,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.11.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
