--- a/App/package.json
+++ b/App/package.json
@@ -43,7 +43,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
