--- a/Server/package.json
+++ b/Server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "currency-formatter": "^1.5.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
