--- a/App/package.json
+++ b/App/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.5.1",
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
+    "expo-notifications": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
     "react": "18.2.0",
@@ -43,8 +44,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.1.3",
-    "expo-notifications": "~0.18.1"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
