--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "handlebars": "^4.7.8",
+    "highcharts": "^11.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemon": "^3.0.1"
