--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
     "highcharts": "^11.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "vue": "^2.7.15"
   }
 }
