--- a/App/package.json
+++ b/App/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
