--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "vue": "^2.7.15"
   }
 }
