--- a/App/package.json
+++ b/App/package.json
@@ -46,7 +46,9 @@
     "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
