--- a/App/package.json
+++ b/App/package.json
@@ -33,6 +33,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
