--- a/App/package.json
+++ b/App/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/auth": "^17.5.0",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.14",
+    "react-native-date-picker": "^4.3.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
@@ -37,6 +39,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.11.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
